Fix: visual bug when product name is too long. (CartModalWindow)

--- a/sources/ts/components/Header/components/CartModalWindow/CartModalWindow.module.css
+++ b/sources/ts/components/Header/components/CartModalWindow/CartModalWindow.module.css
@@ -151,6 +151,10 @@
     align-items: center;
 }
 
+.cart-item-product-name {
+    padding-right: 20px;
+}
+
 .cart-item-product-name,
 .cart-item-product-price {
     text-align: left;
